fix layout bug in profile

--- a/app/assets/stylesheets/components/_quirk_index.scss
+++ b/app/assets/stylesheets/components/_quirk_index.scss
@@ -7,9 +7,7 @@
   box-shadow: 1px 1px 1px #ccc;
   border-radius: 0px 0px 10px 10px;
   min-height: 250px;
-  margin: 0 20px;
   padding-bottom: 20px;
-  flex-grow: 2;
   &-headerSection {
     margin-bottom: 30px;
     padding: 20px;
@@ -95,7 +93,7 @@
   }
   @media only screen and (min-width: 768px) {
     min-width: 560px;
-    max-width: 560px;
+    max-width: 600px;
     margin: 0 auto;
     overflow-y: scroll;
     border-radius: 0px 10px 10px 0px;
