--- a/app/assets/stylesheets/components/_quirk_index_item.scss
+++ b/app/assets/stylesheets/components/_quirk_index_item.scss
@@ -9,8 +9,6 @@
     margin-bottom: 10px;
   }
   &-mainContent {
-    min-width: 350px;
-    min-height: 100px;
     width: 100%;
     margin-left: 0;
   }
@@ -44,8 +42,7 @@
   @media only screen and (min-width: 768px) {
     display: flex;
     &-mainContent {
-      margin-left: 20px;
-      margin-top: 0;
+      margin-left: 0 0 0 20px;
     }
   }
 }
